# Suntyn-AI

./: .env.example  .gitignore  .replit  COMPLETE_DATABASE_SETUP_REPORT.md  DATABASE_SETUP_INSTRUCTIONS.md  DEPLOYMENT.md  DOMAIN_FIX_HINDI.md  FIREBASE_DOMAIN_FIX.md  FIREBASE_SETUP.md  GOOGLE_OAUTH_FIX.md  QUICK_FIX_GUIDE.md  README.md  TOOLS_WORKING_GUIDE.md  app.py  build.sh  check_database_status.py  check_domain.py  check_tools_db.py  config.py  create_all_tool_templates.py  create_enhanced_tool_templates.py  create_individual_tool_pages.py  create_professional_tool_pages.py  create_professional_tool_system.py  create_simple_templates.py  create_unique_tool_templates.py  database_setup.py  debug_tools.py  debug_tools_page.py  final_create_all_templates.py  firebase_config.py  fix_database_and_restore_tools.py  fix_firebase_domain.py  fix_mobile_tools.py  fix_template_syntax.py  fresh_database_setup.py  fresh_suntyn_ai_setup.py  implement_advanced_features.py  init_suntyn_database.py  main.py  (+18 more)
attached_assets/: Pasted--Template-85-tool-all-different-Specific-template-popular-tools-ke-liye-unique-design-and-Functio-1752690788230_1752690788231.txt  Pasted-Arthik-Grow-Financial-Tips-Investment-chat-PDF-Toolkit-name-Merge-PDF-descripti-1752690244058_1752690244064.txt  Pasted-Arthik-Grow-Financial-Tips-Investment-chat-PDF-Toolkit-name-Merge-PDF-descripti-1752735988766_1752735988776.txt  Pasted-Barasha-aapke-project-mein-kai-issues-ek-sath-aa-rahe-hain-Python-backend-Firebase-Auth-Lucide-1752670617811_1752670617815.txt  (+4 more)
instance/: toolora.db
routes/: api.py  api_backup.py  (+8 more)
(+326 files in other folders)
